2006-05-09  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-time-editor.c:
	(_hildon_time_editor_get_time_separators) renamed from
	_get_time_separator(). Refactored to return h-m and m-s
	separators. Now it is independent of the time editor priv
	structure and receives two labels that can be NULL.

	(_HildonTimeEditorPrivate): removed hm_sep_symbol and ms_sep_symbol
	members: not used anymore.
	(hildon_time_editor_init): removed ref to above members.
	(hildon_time_editor_finalize): likewise

	(hildon_time_editor_check_locale): use
	_hildon_time_editor_get_time_separators()
	
	* hildon-widgets/hildon-private.h: new file. To be used to use
	private functions from other widgets inside the library.
	(_hildon_time_editor_get_time_separators): added.
	
	* hildon-widgets/Makefile.am:
	added hildon-private.h to the source list.

	
	* hildon-widgets/hildon-time-picker.c (hildon_time_picker_init):
	Use _hildon_time_editor_get_time_separators() to get the h-m
	separator from the locale (and not from a .po file)

	N#28654


2006-05-09  Marius Vollmer  <marius.vollmer@nokia.com>

	* hildon-widgets/hildon-find-toolbar.c
	(hildon_find_toolbar_class_init): Reverted change from 2006-04-15:
	The "search", "close", "invalid_input", "history_append" signals
	have always been correctly registered: you don't include the last
	'user data' parameter in the list of argument types passed to
	g_signal_new et al.  Thanks to Jorn from OpenedHand!

	N#28807
	
2006-05-08  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: 0.12.14

2006-05-04  Luc Pionchon  <luc.pionchon@nokia.com>

	gtk-doc config bits...
	* autogen.sh: call aclocal first
	* configure.ac: enable GTK_DOC_CHECK
	* doc/Makefile.am: really "include". "-include" is not followed by
	automake, as a result gtk-doc.make would not be processed.
	

2006-05-03  Luc Pionchon  <luc.pionchon@nokia.com>

	N#27000 (additional fixes to patch from 2006-05-01)
