@@ -1,3 +1,10 @@
+3006-05-10 Tapani Palli <tapani.palli@nokia.com>
+
+	* hildon-widgets/hildon-time-editor.c:
+	block signal handler for hildon_time_editor_inserted_text
+
+	NB#28679
+
 2006-05-09  Luc Pionchon  <luc.pionchon@nokia.com>
 
 	* hildon-widgets/hildon-time-editor.c:
